# trucCompBus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Installer/: build_installer.sh  distribution.xml
Installer/Resources/: welcome.html
Installer/output/: trucCompBus_1.1.0_Installer.pkg
Source/: Compressor.h  CustomLookAndFeel.h  GRMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
